--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title></title>
 
         <!--<script src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js" type="text/javascript"></script>-->
-        <script src="http://js.static.yandex.net/jquery/1.3.2/_jquery.js" type="text/javascript"></script>
+        <script src="http://js.static.yandex.net/jquery/1.3.2/jquery.js" type="text/javascript"></script>
         <script src="templates.js" type="text/javascript"></script>
         <script src="input.js" type="text/javascript"></script>
         <script src="index.js" type="text/javascript"></script>
